# utf8_decoder

./: .gitignore  CMakeLists.txt  README.md  logger.h  utf8-decoder.h  utf8_decoder.c  utf8_decoder.h
.github/workflows/: ci.yml  linux-clang.yml  linux-gcc.yml  msvc.yml
tests/: CMakeLists.txt  test.h  tests.c  tests.cpp
